--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="display">
       <div id="work">
-        <h1>Work.</h1>
+        <h1>Documenting a PhD journey</h1>
         <div class="projects" id="work_section">
                         <a href="https://github.com/arindam-8/arindam-8.github.io" target="_blank">
                         <section>
@@ -124,6 +124,6 @@
         magicForksGrid.listen();
       });
     </script>
-  
+
 
 </body></html>
