--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="display">
       <div id="work">
-        <h1>Documenting a PhD journey</h1>
+        <h1>Projects</h1>
         <div class="projects" id="work_section">
                         <a href="https://github.com/arindam-8/arindam-8.github.io" target="_blank">
                         <section>
@@ -59,7 +59,7 @@
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        <a href="https://github.com/imfunniee" target="_blank">made on earth by a human</a>
+        <a href="https://github.com/arindam-8" target="_blank">Documenting my PhD journey</a>
       </div>
     </div>
     <script type="text/javascript">
