--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/73947486?v=4) center;"></div>
       <div id="username"><span style="display:none;">null</span><a href="https://github.com/arindam-8">@arindam-8</a></div>
-      <div id="userbio" style="display: none;">PhD candidate at Imperial College London</div>
+      <div id="userbio" style="display: block;">PhD candidate at Imperial College London</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Imperial College London</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
