--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/73947486?v=4) center;"></div>
-      <div id="username"><span style="display:none;">null</span><a href="https://github.com/arindam-8">@arindam-8</a></div>
+      <div id="username"><span style="display:none;">null</span><a href="https://srg.doc.ic.ac.uk/people/arindam-sharma/">@arindam-8</a></div>
       <div id="userbio" style="display: block;">PhD candidate at Imperial College London</div>
       <div id="about">
                 <span style="display:block;"><i class="fas fa-users"></i> &nbsp; Imperial College London</span>
@@ -59,7 +59,7 @@
         <div id="blogs"></div>
       </div>
       <div id="footer">
-        <a href="https://github.com/arindam-8" target="_blank">Documenting my PhD journey</a>
+        <a href="https://srg.doc.ic.ac.uk/people/arindam-sharma/" target="_blank">Documenting my PhD journey</a>
       </div>
     </div>
     <script type="text/javascript">
